Cambio de error

--- a/dia1.html
+++ b/dia1.html
@@ -81,12 +81,13 @@
                       </a>
                       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <li class="dia"><a class="dropdown-item" href="dia1.html">Día 1 (G)</a></li>
-                        <li class="dia"><a class="dropdown-item" href="404.html">Día 2 (?)</a></li>
+                        <li class="dia"><a class="dropdown-item" href="dia2.html">Día 2 (L)</a></li>
                         <li class="dia"><a class="dropdown-item" href="404.html">Día 3 (?)</a></li>
                         <li class="dia"><a class="dropdown-item" href="404.html">Día 4 (?)</a></li>
                         <li class="dia"><a class="dropdown-item" href="404.html">Día 5 (?)</a></li>
                         <li class="dia"><a class="dropdown-item" href="404.html">Día 6 (?)</a></li>
                         <li class="dia"><a class="dropdown-item" href="404.html">Día 7 (?)</a></li>
+                      </div>lass="dia"><a class="dropdown-item" href="404.html">Día 7 (?)</a></li>
                       </div>
                                       </div>
                                     </ul>
