--- a/about-me.html
+++ b/about-me.html
@@ -79,7 +79,7 @@
                                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                           <li class="dia"><a class="dropdown-item" href="dia1.html">Día 1 (G)</a></li>
                                           <li class="dia"><a class="dropdown-item" href="dia2.html">Día 2 (L)</a></li>
-                                          <li class="dia"><a class="dropdown-item" href="404.html">Día 3 (?)</a></li>
+                                          <li class="dia"><a class="dropdown-item" href="dia3.html">Día 3 (A)</a></li>
                                           <li class="dia"><a class="dropdown-item" href="404.html">Día 4 (?)</a></li>
                                           <li class="dia"><a class="dropdown-item" href="404.html">Día 5 (?)</a></li>
                                           <li class="dia"><a class="dropdown-item" href="404.html">Día 6 (?)</a></li>
