--- a/dia1.html
+++ b/dia1.html
@@ -81,7 +81,7 @@
                                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                           <li class="dia"><a class="dropdown-item" href="dia1.html">Día 1 (G)</a></li>
                                           <li class="dia"><a class="dropdown-item" href="dia2.html">Día 2 (L)</a></li>
-                                          <li class="dia"><a class="dropdown-item" href="404.html">Día 3 (?)</a></li>
+                                          <li class="dia"><a class="dropdown-item" href="dia3.html">Día 3 (A)</a></li>
                                           <li class="dia"><a class="dropdown-item" href="404.html">Día 4 (?)</a></li>
                                           <li class="dia"><a class="dropdown-item" href="404.html">Día 5 (?)</a></li>
                                           <li class="dia"><a class="dropdown-item" href="404.html">Día 6 (?)</a></li>
@@ -161,7 +161,7 @@
             Swal.fire({
               icon: 'info',
               title: 'INFORMACIÓN IMPORTANTE',
-              text: 'Manten presionada la imagen y hallarás pistas',
+              text: 'Manten presionada la imagen y hallarás pistas ❤',
               confirmButtonText: 'De Acuerdo',
               confirmButtonColor: '#00bd9d',
               iconColor: '#00bd9d',
