--- a/dia3.html
+++ b/dia3.html
@@ -82,7 +82,7 @@
                                           <li class="dia"><a class="dropdown-item" href="dia1.html">Día 1 (G)</a></li>
                                           <li class="dia"><a class="dropdown-item" href="dia2.html">Día 2 (L)</a></li>
                                           <li class="dia"><a class="dropdown-item" href="dia3.html">Día 3 (A)</a></li>
-                                          <li class="dia"><a class="dropdown-item" href="404.html">Día 4 (?)</a></li>
+                                          <li class="dia"><a class="dropdown-item" href="dia4.html">Día 4 (E)</a></li>
                                           <li class="dia"><a class="dropdown-item" href="404.html">Día 5 (?)</a></li>
                                           <li class="dia"><a class="dropdown-item" href="404.html">Día 6 (?)</a></li>
                                           <li class="dia"><a class="dropdown-item" href="404.html">Día 7 (?)</a></li>
