--- a/about-me.html
+++ b/about-me.html
@@ -82,8 +82,8 @@
                                           <li class="dia"><a class="dropdown-item" href="dia3.html">Día 3 (A)</a></li>
                                           <li class="dia"><a class="dropdown-item" href="dia4.html">Día 4 (E)</a></li>
                                           <li class="dia"><a class="dropdown-item" href="dia5.html">Día 5 (R)</a></li>
-                                          <li class="dia"><a class="dropdown-item" href="404.html">Día 6 (?)</a></li>
-                                          <li class="dia"><a class="dropdown-item" href="404.html">Día 7 (?)</a></li>
+                                          <li class="dia"><a class="dropdown-item" href="dia6.html">Día 6 (I)</a></li>
+                                          <li class="dia"><a class="dropdown-item" onclick="alertagabo();" style="cursor:pointer;">Día 7 (B)</a></li>
                                         </div>
                                       </div>
                                     </ul>
