--- a/index.html
+++ b/index.html
@@ -106,26 +106,26 @@
                   </div>
                   <!-- RD Navbar Nav MENU-->
                   <!-- RD Navbar Nav-->
-                                <ul class="rd-navbar-nav">
-                                <li class="active"><a href="index.html">Home<span></span><span></span><span></span><span></span></a>
-                                </li>
-                                <li><a href="about-me.html">¿Por qué lo hago?<span></span><span></span><span></span><span></span></a>
-                               </li>
-                            <div class="dropdown drop-color active">
-                              <a class="btn buton-color dropdown-toggle" role="buton" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                  Calendario de días 📅
-                              </a>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <li class="dia"><a class="dropdown-item" href="dia1.html">Día 1 (G)</a></li>
-                            <li class="dia"><a class="dropdown-item" href="dia2.html">Día 2 (L)</a></li>
-                            <li class="dia"><a class="dropdown-item" href="dia3.html">Día 3 (A)</a></li>
-                            <li class="dia"><a class="dropdown-item" href="dia4.html">Día 4 (E)</a></li>
-                            <li class="dia"><a class="dropdown-item" href="dia5.html">Día 5 (R)</a></li>
-                            <li class="dia"><a class="dropdown-item" href="404.html">Día 6 (?)</a></li>
-                            <li class="dia"><a class="dropdown-item" href="404.html">Día 7 (?)</a></li>
-                          </div>
-                        </div>
-                      </ul>
+                  <ul class="rd-navbar-nav">
+                    <li class="active"><a href="index.html">Home<span></span><span></span><span></span><span></span></a>
+                    </li>
+                    <li><a href="about-me.html">¿Por qué lo hago?<span></span><span></span><span></span><span></span></a>
+                    </li>
+                    <div class="dropdown drop-color active">
+                      <a class="btn buton-color dropdown-toggle" role="buton" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Calendario de días 📅
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <li class="dia"><a class="dropdown-item" href="dia1.html">Día 1 (G)</a></li>
+                        <li class="dia"><a class="dropdown-item" href="dia2.html">Día 2 (L)</a></li>
+                        <li class="dia"><a class="dropdown-item" href="dia3.html">Día 3 (A)</a></li>
+                        <li class="dia"><a class="dropdown-item" href="dia4.html">Día 4 (E)</a></li>
+                        <li class="dia"><a class="dropdown-item" href="dia5.html">Día 5 (R)</a></li>
+                        <li class="dia"><a class="dropdown-item" href="dia6.html">Día 6 (I)</a></li>
+                        <li class="dia"><a class="dropdown-item" onclick="alertagabo();" style="cursor:pointer;">Día 7 (B)</a></li>
+                      </div>
+                    </div>
+                  </ul>
                 </div>
               </div>
             </div>
